DeploymentandService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: second-app
      tier: backend
  template:  
    metadata:
      labels: 
        app: second-app
        tier: backend
    spec:
      containers: 
        - name: second-node
          image: dockeridsreekanth/kub-first-app:latest
