DeploymentandService/se.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dep
  name: dep
spec:
  ports:
  - port: 800
    protocol: TCP
    targetPort: 80
  selector:
    app: dep
  type: ClusterIP
status:
  loadBalancer: {}
