DeploymentandService/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ings
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx
  rules:
  - host: test.example.com
    http:
      paths:
      - backend:
          service:
            name: dep
            port:
              number: 800
        path: /test
        pathType: Prefix
status:
  loadBalancer: {}
